Project1Vanquish/force-app/main/default/objects/Work_Orderc__c/Work_Orderc__c.object-meta.xml
<CustomObject>
    <label>Work Orderc</label>
    <nameField>
        <label>Work Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Ordersc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>