Project1Vanquish/force-app/main/default/objects/Work_Orderc__c/fields/Assigned_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>