Project1Vanquish/force-app/main/default/objects/Work_Orderc__c/fields/Worder_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Worder_Order_Number__c</fullName>
    <label>Worder Order Number</label>
    <length>34</length>
    <required>true</required>
    <type>Text</type>
</CustomField>